<resources>
    <string name="app_name" translatable="false">Calculator</string>
    <string name="_0" translatable="false">0</string>
    <string name="c" translatable="false">C</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="_7" translatable="false">7</string>
    <string name="_8" translatable="false">8</string>
    <string name="_9" translatable="false">9</string>
    <string name="minus" translatable="false">-</string>
    <string name="_4" translatable="false">4</string>
    <string name="_5" translatable="false">5</string>
    <string name="_6" translatable="false">6</string>
    <string name="plus">+</string>
    <string name="_1" translatable="false">1</string>
    <string name="_2" translatable="false">2</string>
    <string name="_3" translatable="false">3</string>
    <string name="equals">=</string>
    <string name="dash" translatable="false">/</string>
    <string name="del">del</string>
    <string name="color">color?</string>
    <string name="calcul_scientifique">Calcul Scientifique</string>
    <string name="calcul_scientifique2">calcul_scientifique?</string>
    <string name="pi">π</string>
    <string name="tan">tan</string>
    <string name="retour">Retour</string>
</resources>