<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <GridLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="7"
        tools:ignore="ExtraText">

    <TextView
        android:id="@+id/displayTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_columnSpan="4"
        android:layout_gravity="fill_horizontal"
        android:background="#FFFFFF"
        android:gravity="end"
        android:padding="16dp"
        android:text="@string/_0"
        android:textColor="#000000"
        android:textSize="36sp" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_columnWeight="1"
        android:text="@string/c" />

    <Button
        android:id="@+id/delButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:text="@string/del" />

    <Button
        android:id="@+id/changeColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_columnWeight="1"
        android:text="@string/color" />


    <Button
        android:id="@+id/divideButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_columnWeight="1"
        android:text="@string/dash"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/multiplyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_columnWeight="1"
        android:text="*"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/sevenButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_columnWeight="1"
        android:text="7"
        android:backgroundTint="@color/cyan"
        android:textColor="@color/black"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/eightButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_columnWeight="1"
        android:backgroundTint="@color/cyan"
        android:textColor="@color/black"
        android:text="8" />

    <Button
        android:id="@+id/nineButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_columnWeight="1"
        android:backgroundTint="@color/cyan"
        android:textColor="@color/black"
        android:text="9" />

    <Button
        android:id="@+id/minusButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_columnWeight="1"
        android:text="-" />

    <Button
        android:id="@+id/fourButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_columnWeight="1"
        android:backgroundTint="@color/cyan"
        android:textColor="@color/black"
        android:text="4" />

    <Button
        android:id="@+id/fiveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_columnWeight="1"
        android:textColor="@color/black"
        android:backgroundTint="@color/cyan"
        android:text="5" />

    <Button
        android:id="@+id/sixButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_columnWeight="1"
        android:backgroundTint="@color/cyan"
        android:textColor="@color/black"
        android:text="6" />

    <Button
        android:id="@+id/plusButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_columnWeight="1"
        android:text="+" />

    <Button
        android:id="@+id/oneButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_columnWeight="1"
        android:textColor="@color/black"
        android:backgroundTint="@color/cyan"
        android:text="1" />

    <Button
        android:id="@+id/twoButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_columnWeight="1"
        android:textColor="@color/black"
        android:backgroundTint="@color/cyan"
        android:text="2" />

    <Button
        android:id="@+id/threeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_columnWeight="1"
        android:backgroundTint="@color/cyan"
        android:textColor="@color/black"
        android:text="3" />

    <Button
        android:id="@+id/equalsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"

        android:backgroundTint="@color/blue"
        android:text="=" />

    <Button
        android:id="@+id/zeroButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:backgroundTint="@color/cyan"
        android:textColor="@color/black"
        android:text="0" />

    <Button
        android:id="@+id/calculSc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_columnSpan="4"
        android:layout_gravity="fill"
        android:backgroundTint="@color/yellow"
        android:textColor="@color/black"
        android:text="@string/calcul_scientifique2" />
    </GridLayout>
</ScrollView>